Closed Bug 1050644 Opened 12 years ago Closed 11 years ago

[TSF][TS_E_NOLAYOUT][e10s] Candidate window of TIPs don't work correctly

Categories

(Core :: Widget: Win32, defect)

x86_64
Windows 8.1
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla42
Tracking Status
e10s + ---
firefox42 --- fixed

People

(Reporter: masayuki, Assigned: masayuki)

References

(Depends on 1 open bug)

Details

(Keywords: inputmethod)

Attachments

(2 files)

In e10s window, TIP's candidate window shows at wrong position (Japanese TIPs) or doesn't show (Chinese TIPs). With IMM-IME, I don't have this bug. This should be fixed by fix of bug 975260. However, I'd like to file this individually for explaining what symptoms exist in e10s mode.
Depends on: 966157
Blocks: e10s-ime
Move old M2's low-priority bugs to M6 milestone.
Depends on: 1121408
(In reply to Masayuki Nakano (:masayuki) (Mozilla Japan) (offline: 2/28-3/8) from comment #0) > In e10s window, TIP's candidate window shows at wrong position (Japanese > TIPs) or doesn't show (Chinese TIPs). > > With IMM-IME, I don't have this bug. > > This should be fixed by fix of bug 975260. However, I'd like to file this > individually for explaining what symptoms exist in e10s mode. Since bug 975260 is now closed, I wonder if this is in fact fixed. I don't have good str here to test, Masayuki can you confirm if this is still a valid bug?
Flags: needinfo?(masayuki)
(In reply to Jim Mathies [:jimm] from comment #2) > (In reply to Masayuki Nakano (:masayuki) (Mozilla Japan) (offline: 2/28-3/8) > from comment #0) > > In e10s window, TIP's candidate window shows at wrong position (Japanese > > TIPs) or doesn't show (Chinese TIPs). > > > > With IMM-IME, I don't have this bug. > > > > This should be fixed by fix of bug 975260. However, I'd like to file this > > individually for explaining what symptoms exist in e10s mode. > > Since bug 975260 is now closed, I wonder if this is in fact fixed. I don't > have good str here to test, Masayuki can you confirm if this is still a > valid bug? "normal" candidate window of each Japanese IME is positioned correctly. However, I still see some related bugs: 1. ATOK's suggestion list is positioned wrong position (top-left of the window?) 2. Candidate window of both Simplified and Traditional Chinese IMEs (I tested with MS Pinyin and MS ChangJie) is not shown (i.e., hidden).
Flags: needinfo?(masayuki)
Requesting re-triage. Bug 1147722 should be an M6. I'm thinking we could move this up to M7 or M8.
After all dependent bugs are fixed, there will be only Chinese TIP bugs. According to the logs, we don't behave odd, but it seems that they give up to show candidate window if GetTextExt() returns TS_E_NOLAYOUT after unlocking the document. I think that we should add hack for them with whitelist.
Assignee: nobody → masayuki
Status: NEW → ASSIGNED
Buggy TIP names on Win8.1: * "Microsoft Pinyin"/"微软拼音" * "Microsoft Wubi"/"微软五笔" * "Microsoft ChangJie"/"微軟倉頡" * "Microsoft Quick"/"微軟速成"
Looks like that all inbox IMEs in Windows 7 don7t have this bug. I guess that Vista must be so too.
On Windows 10 (10074), except MS ChangJie has this bug.
TIP names: * "Microsoft Pinyin"/"微软拼音"/"微軟拼音" * "Microsoft Wubi"/"微软五笔"/"微軟五筆" * "Microsoft ChangJie"/"微软仓颉"/"微軟倉頡" * "Microsoft Quick"/"微软速成"/"微軟速成" I realized that they have different name in Simplified or Traditional Chinese.
I add two prefs for the different locales of the TIPs. This patch works on Win10 too.
Attachment #8638911 - Flags: review?(VYV03354)
Attachment #8638910 - Flags: review?(VYV03354) → review+
Attachment #8638911 - Flags: review?(VYV03354) → review+
url: https://hg.mozilla.org/integration/mozilla-inbound/rev/b40379bbe7f35429072cce42ffdbce4ad9f21d5a changeset: b40379bbe7f35429072cce42ffdbce4ad9f21d5a user: Masayuki Nakano <masayuki@d-toybox.com> date: Mon Aug 03 15:15:30 2015 +0900 description: Bug 1050644 part.1 Add methods to check whether the active TIP is Chinese TIP which deosn't show candidate window in e10s mode r=emk url: https://hg.mozilla.org/integration/mozilla-inbound/rev/00e3222ed96f6a2d3c063a38caf1e9e4ba329c03 changeset: 00e3222ed96f6a2d3c063a38caf1e9e4ba329c03 user: Masayuki Nakano <masayuki@d-toybox.com> date: Mon Aug 03 15:15:30 2015 +0900 description: Bug 1050644 part.2 Hack ITextStoreACP::GetTextExt()'s offset for some Chinese TIPs of MS r=emk
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla42
I reported this bug to MS via Windows Feedback. Windows-Feedback:?contextid=330&feedbackid=d1b8f394-3bfa-4c50-9638-1fa1afe60244&form=1&src=2
Summary: [TSF][e10s] Candidate window of TIPs don't work correctly → [TSF][TS_E_NOLAYOUT][e10s] Candidate window of TIPs don't work correctly
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: